# POK-Ordering

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  Dockerfile.prod  Makefile  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  ngrok.yml  pyproject.toml
.github/workflows/: ci.yml
.opencode/plans/: telegram-order-alert-script.md
docs/code-review/: fastapi-python-review.md
docs/product/: data-requirements.md  engineering-workflow.md  epics.md  state-machine.md  test-scenarios.md  use-cases.md  user-stories.md
frontend/: .dockerignore  AGENTS.md  Dockerfile.prod  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BowlSummary.tsx  CategorySection.tsx  IngredientCard.tsx  MenuLoadingSkeleton.tsx  SnappingSlider.tsx
frontend/src/lib/: api-client.ts  api.ts  constants.ts  mock-data.ts  order-storage.ts  pricing.ts  types.ts
json_workflow/: README.txt
migrations/: 001_sessions.sql  002_optional_menu.sql  002_sessions_index.sql  003_website_orders.sql  004_multi_select.sql
scripts/: send_test_order_alert.py  test_instagram.py
src/: config.py  deps.py  logging_config.py  main.py
src/adapters/: chef_request_sheets.py  component_repo.py  order_repo.py  telegram.py
src/api/: staff.py  website.py
src/domain/contracts/: chef_request_repo.py  component_repo.py  order_repo.py
src/domain/core/: payment.py  (+2 more)
src/models/: __init__.py  chef_request.py  component.py  order.py  website.py
tests/: conftest.py
tests/unit/: test_payment.py  test_pricing.py
(+7 files in other folders)
